# inventory-management

./: .envrc  .gitignore  README.md  get-video.py  pyproject.toml  slow-upload.py  video-to-frames.py
inventory-count/: README.md  generate-frames.py
video-generation/: README.md  create-video.py  generate-frames.py  labeler.py  video-uploader.py
